--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-scripts": "1.0.13",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,5 +20,6 @@
   },
   "devDependencies": {
     "redux-devtools": "^3.4.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
