--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^4.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.1.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-scripts": "1.0.13",
