--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "redux-devtools": "^3.4.0"
+    "redux-devtools": "^3.4.0",
+    "riek": "^1.1.0"
   },
   "proxy": "http://localhost:3001"
 }
