--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "redux-devtools": "^3.4.0",
     "riek": "^1.1.0"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
